COMP_1_Chekpoint/Jmm.java
/* Jmm.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. Jmm.java */
import java.io.File;
import java.io.FileInputStream;
import java.io.FileOutputStream;
import java.io.FileNotFoundException;
import java.io.InputStream;
import java.io.IOException;
import java.util.*;

public class Jmm/*@bgen(jjtree)*/implements JmmTreeConstants, JmmConstants {/*@bgen(jjtree)*/
  protected static JJTJmmState jjtree = new JJTJmmState();public static void main(String args[]) throws ParseException, IOException {

                InputStream f = null;

                try {
            f = new FileInputStream("teste");
        }catch(FileNotFoundException e) {
                        System.out.println("Error opening file:");
            System.out.println(e.getMessage());
            System.exit(1);
        }

                try{
                        Jmm myJmm = new Jmm(f);
                        SimpleNode root = myJmm.Program(); // returns reference to root node

                        root.dump("");
                } catch (Exception e){
                        System.out.println(e.getMessage());
                        System.out.println("Sorry, we were not able to run your code, because we found one or more error trying to parse it.");
                }
        }

  static final public SimpleNode Program() throws ParseException {/*@bgen(jjtree) Program */
  ASTProgram jjtn000 = new ASTProgram(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      ClassDeclaration();
jjtree.closeNodeScope(jjtn000, true);
                             jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void ClassDeclaration() throws ParseException {/*@bgen(jjtree) ClassDeclaration */
                           ASTClassDeclaration jjtn000 = new ASTClassDeclaration(JJTCLASSDECLARATION);
                           boolean jjtc000 = true;
                           jjtree.openNodeScope(jjtn000);Token t;
    try {
      try {
        jj_consume_token(CLASS);
        t = jj_consume_token(IDENTIFIER);
jjtn000.setName(t.image);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case EXT:{
          ExtendClassDeclaration();
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          ;
        }
        jj_consume_token(CHAV_L);
      } catch (ParseException e) {
System.out.println("Class declaration: " + e.getMessage());
      }
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case BOOLEAN:
        case INT:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          break label_1;
        }
        VarDeclaration();
      }
      AuxClassDeclaration();
      jj_consume_token(CHAV_R);
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void ExtendClassDeclaration() throws ParseException {/*@bgen(jjtree) Extend */
  ASTExtend jjtn000 = new ASTExtend(JJTEXTEND);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(EXT);
      ID();
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void AuxClassDeclaration() throws ParseException {
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PUBLIC:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      jj_consume_token(PUBLIC);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case STATIC:{
        MainDeclaration();
        break;
        }
      case BOOLEAN:
      case INT:
      case IDENTIFIER:{
        MethodDeclaration();
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void VarDeclaration() throws ParseException {/*@bgen(jjtree) VarDeclaration */
                        ASTVarDeclaration jjtn000 = new ASTVarDeclaration(JJTVARDECLARATION);
                        boolean jjtc000 = true;
                        jjtree.openNodeScope(jjtn000);Token t; String type;
    try {
      try {
        type = Type();
        t = jj_consume_token(IDENTIFIER);
jjtn000.setName(t.image); jjtn000.setType(type);
        jj_consume_token(SCOLON);
      } catch (ParseException e) {
System.out.println("Var declaration: " + e.getMessage());
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void MainDeclaration() throws ParseException {/*@bgen(jjtree) MainDeclaration */
  ASTMainDeclaration jjtn000 = new ASTMainDeclaration(JJTMAINDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(STATIC);
      jj_consume_token(VOID);
      jj_consume_token(MAIN);
      jj_consume_token(PAR_L);
      jj_consume_token(STR);
      jj_consume_token(BRACKET_L);
      jj_consume_token(BRACKET_R);
      jj_consume_token(IDENTIFIER);
      jj_consume_token(PAR_R);
      jj_consume_token(CHAV_L);
      label_3:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_3;
        }
        VarDeclaration();
      }
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INTEGER:
        case BOOL:
        case CHAV_L:
        case IF:
        case NEW:
        case NOT:
        case PAR_L:
        case THIS:
        case WHILE:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[4] = jj_gen;
          break label_4;
        }
        Statement();
      }
      jj_consume_token(CHAV_R);
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void MethodDeclaration() throws ParseException {/*@bgen(jjtree) MethodDeclaration */
                           ASTMethodDeclaration jjtn000 = new ASTMethodDeclaration(JJTMETHODDECLARATION);
                           boolean jjtc000 = true;
                           jjtree.openNodeScope(jjtn000);Token t;
    try {
      Type();
      t = jj_consume_token(IDENTIFIER);
jjtn000.setName(t.image);
      jj_consume_token(PAR_L);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case BOOLEAN:
      case INT:
      case IDENTIFIER:{
        Type();
        jj_consume_token(IDENTIFIER);
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case VIRG:{
            ;
            break;
            }
          default:
            jj_la1[5] = jj_gen;
            break label_5;
          }
          jj_consume_token(VIRG);
          Type();
          jj_consume_token(IDENTIFIER);
        }
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      jj_consume_token(PAR_R);
      jj_consume_token(CHAV_L);
      label_6:
      while (true) {
        if (jj_2_2(2)) {
          ;
        } else {
          break label_6;
        }
        VarDeclaration();
      }
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INTEGER:
        case BOOL:
        case CHAV_L:
        case IF:
        case NEW:
        case NOT:
        case PAR_L:
        case THIS:
        case WHILE:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          break label_7;
        }
        Statement();
      }
      jj_consume_token(RET);
      Expression();
      jj_consume_token(SCOLON);
      jj_consume_token(CHAV_R);
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public String Type() throws ParseException {Token type;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:{
      type = jj_consume_token(INT);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case BRACKET_L:{
        jj_consume_token(BRACKET_L);
        jj_consume_token(BRACKET_R);
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      break;
      }
    case BOOLEAN:{
      type = jj_consume_token(BOOLEAN);
      break;
      }
    case IDENTIFIER:{
      type = jj_consume_token(IDENTIFIER);
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return type.image;}
    throw new Error("Missing return statement in function");
  }

  static final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CHAV_L:{
      jj_consume_token(CHAV_L);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INTEGER:
        case BOOL:
        case CHAV_L:
        case IF:
        case NEW:
        case NOT:
        case PAR_L:
        case THIS:
        case WHILE:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          break label_8;
        }
        Statement();
      }
      jj_consume_token(CHAV_R);
      break;
      }
    case IF:{
ASTIfElseStatement jjtn001 = new ASTIfElseStatement(JJTIFELSESTATEMENT);
            boolean jjtc001 = true;
            jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(IF);
        jj_consume_token(PAR_L);
        Expression();
        jj_consume_token(PAR_R);
        Statement();
        jj_consume_token(ELSE);
        Statement();
      } catch (Throwable jjte001) {
if (jjtc001) {
              jjtree.clearNodeScope(jjtn001);
              jjtc001 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte001 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte001;}
            }
            if (jjte001 instanceof ParseException) {
              {if (true) throw (ParseException)jjte001;}
            }
            {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
              jjtree.closeNodeScope(jjtn001, true);
            }
      }
      break;
      }
    case WHILE:{
ASTWhileStatement jjtn002 = new ASTWhileStatement(JJTWHILESTATEMENT);
            boolean jjtc002 = true;
            jjtree.openNodeScope(jjtn002);
      try {
        jj_consume_token(WHILE);
        jj_consume_token(PAR_L);
        Expression();
        jj_consume_token(PAR_R);
        Statement();
      } catch (Throwable jjte002) {
if (jjtc002) {
              jjtree.clearNodeScope(jjtn002);
              jjtc002 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte002 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte002;}
            }
            if (jjte002 instanceof ParseException) {
              {if (true) throw (ParseException)jjte002;}
            }
            {if (true) throw (Error)jjte002;}
      } finally {
if (jjtc002) {
              jjtree.closeNodeScope(jjtn002, true);
            }
      }
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      if (jj_2_3(2)) {
        Expression();
        jj_consume_token(SCOLON);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:{
ASTAssing jjtn003 = new ASTAssing(JJTASSING);
            boolean jjtc003 = true;
            jjtree.openNodeScope(jjtn003);
          try {
            ID();
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case BRACKET_L:{
              jj_consume_token(BRACKET_L);
              Expression();
              jj_consume_token(BRACKET_R);
              break;
              }
            default:
              jj_la1[11] = jj_gen;
              ;
            }
            StatementAux();
          } catch (Throwable jjte003) {
if (jjtc003) {
              jjtree.clearNodeScope(jjtn003);
              jjtc003 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte003 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte003;}
            }
            if (jjte003 instanceof ParseException) {
              {if (true) throw (ParseException)jjte003;}
            }
            {if (true) throw (Error)jjte003;}
          } finally {
if (jjtc003) {
              jjtree.closeNodeScope(jjtn003, jjtree.nodeArity() > 1);
            }
          }
          break;
          }
        default:
          jj_la1[13] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void StatementAux() throws ParseException {
    jj_consume_token(EQ);
    Expression();
    jj_consume_token(SCOLON);
  }

/** An Expression. */
  static final public void Expression() throws ParseException {
    AndExpression();
  }

/** An And(&&) Expression. */
  static final public void AndExpression() throws ParseException {
ASTAND jjtn001 = new ASTAND(JJTAND);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
    try {
      LessThanExpression();
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case AND:{
          ;
          break;
          }
        default:
          jj_la1[14] = jj_gen;
          break label_9;
        }
        jj_consume_token(AND);
        LessThanExpression();
      }
    } catch (Throwable jjte001) {
if (jjtc001) {
      jjtree.clearNodeScope(jjtn001);
      jjtc001 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte001 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte001;}
    }
    if (jjte001 instanceof ParseException) {
      {if (true) throw (ParseException)jjte001;}
    }
    {if (true) throw (Error)jjte001;}
    } finally {
if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
    }
    }
  }

/** An LessThan(<) Expression. */
  static final public void LessThanExpression() throws ParseException {
ASTLessThan jjtn001 = new ASTLessThan(JJTLESSTHAN);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
    try {
      AddSubExpression();
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LESSTHAN:{
          ;
          break;
          }
        default:
          jj_la1[15] = jj_gen;
          break label_10;
        }
        jj_consume_token(LESSTHAN);
        AddSubExpression();
      }
    } catch (Throwable jjte001) {
if (jjtc001) {
      jjtree.clearNodeScope(jjtn001);
      jjtc001 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte001 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte001;}
    }
    if (jjte001 instanceof ParseException) {
      {if (true) throw (ParseException)jjte001;}
    }
    {if (true) throw (Error)jjte001;}
    } finally {
if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
    }
    }
  }

/** An AddSub Expression. */
  static final public void AddSubExpression() throws ParseException {Token t;
ASTAdditive jjtn001 = new ASTAdditive(JJTADDITIVE);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
    try {
      MultiplicativeExpression();
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ADDSUB_OP:{
          ;
          break;
          }
        default:
          jj_la1[16] = jj_gen;
          break label_11;
        }
        t = jj_consume_token(ADDSUB_OP);
jjtn001.setName(t.image);
        MultiplicativeExpression();
      }
    } catch (Throwable jjte001) {
if (jjtc001) {
      jjtree.clearNodeScope(jjtn001);
      jjtc001 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte001 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte001;}
    }
    if (jjte001 instanceof ParseException) {
      {if (true) throw (ParseException)jjte001;}
    }
    {if (true) throw (Error)jjte001;}
    } finally {
if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
    }
    }
  }

/** A Multiplicative Expression. */
  static final public void MultiplicativeExpression() throws ParseException {Token t;
ASTMultiplicative jjtn001 = new ASTMultiplicative(JJTMULTIPLICATIVE);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
    try {
      AccessExpression();
      label_12:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ARITH_OP:{
          ;
          break;
          }
        default:
          jj_la1[17] = jj_gen;
          break label_12;
        }
        t = jj_consume_token(ARITH_OP);
jjtn001.setName(t.image);
        AccessExpression();
      }
    } catch (Throwable jjte001) {
if (jjtc001) {
      jjtree.clearNodeScope(jjtn001);
      jjtc001 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte001 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte001;}
    }
    if (jjte001 instanceof ParseException) {
      {if (true) throw (ParseException)jjte001;}
    }
    {if (true) throw (Error)jjte001;}
    } finally {
if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
    }
    }
  }

/** An Access Expression. */
  static final public void AccessExpression() throws ParseException {
ASTAccessExpr jjtn002 = new ASTAccessExpr(JJTACCESSEXPR);
          boolean jjtc002 = true;
          jjtree.openNodeScope(jjtn002);
    try {
      UnaryExpression();
      label_13:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case BRACKET_L:
        case PFINAL:{
          ;
          break;
          }
        default:
          jj_la1[18] = jj_gen;
          break label_13;
        }
ASTExpression jjtn001 = new ASTExpression(JJTEXPRESSION);
                          boolean jjtc001 = true;
                          jjtree.openNodeScope(jjtn001);
        try {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case BRACKET_L:{
            jj_consume_token(BRACKET_L);
            Expression();
            jj_consume_token(BRACKET_R);
            break;
            }
          case PFINAL:{
            jj_consume_token(PFINAL);
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case LENGTH:{
              jj_consume_token(LENGTH);
              break;
              }
            case IDENTIFIER:{
              ID();
              jj_consume_token(PAR_L);
              switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
              case INTEGER:
              case BOOL:
              case NEW:
              case NOT:
              case PAR_L:
              case THIS:
              case IDENTIFIER:{
                Expression();
                label_14:
                while (true) {
                  switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
                  case VIRG:{
                    ;
                    break;
                    }
                  default:
                    jj_la1[19] = jj_gen;
                    break label_14;
                  }
                  jj_consume_token(VIRG);
                  Expression();
                }
                break;
                }
              default:
                jj_la1[20] = jj_gen;
                ;
              }
              jj_consume_token(PAR_R);
              break;
              }
            default:
              jj_la1[21] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
            break;
            }
          default:
            jj_la1[22] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        } catch (Throwable jjte001) {
if (jjtc001) {
                            jjtree.clearNodeScope(jjtn001);
                            jjtc001 = false;
                          } else {
                            jjtree.popNode();
                          }
                          if (jjte001 instanceof RuntimeException) {
                            {if (true) throw (RuntimeException)jjte001;}
                          }
                          if (jjte001 instanceof ParseException) {
                            {if (true) throw (ParseException)jjte001;}
                          }
                          {if (true) throw (Error)jjte001;}
        } finally {
if (jjtc001) {
                            jjtree.closeNodeScope(jjtn001, true);
                          }
        }
      }
    } catch (Throwable jjte002) {
if (jjtc002) {
            jjtree.clearNodeScope(jjtn002);
            jjtc002 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte002 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte002;}
          }
          if (jjte002 instanceof ParseException) {
            {if (true) throw (ParseException)jjte002;}
          }
          {if (true) throw (Error)jjte002;}
    } finally {
if (jjtc002) {
            jjtree.closeNodeScope(jjtn002, jjtree.nodeArity() > 1);
          }
    }
  }
